--- a/index.html
+++ b/index.html
@@ -1,39 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./Assets/style.css" />
+  <title>Work Day Scheduler</title>
+</head>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src='./Assets/index.js'></script>
-  </body>
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <!-- Timeblocks go here -->
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        9 AM -10 AM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        10 AM -11 AM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        11 AM -12 PM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        12 PM -1 PM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        1 PM -2 PM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        2 PM -3 PM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        3 PM -4 PM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    <section class="d-flex justify-content-between">
+      <div class="p-2 border border-primary w-25 text-center">
+        4 PM -5 PM
+      </div>
+      <div class="flex-grow-1">
+        text
+      </div>
+      <div>
+        delete
+      </div>
+    </section>
+    
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src='./Assets/index.js'></script>
+</body>
+
 </html>
